fixes game of life UI bottom padding and cell spacing

--- a/src/app/components/game-of-life/game-of-life.component.css
+++ b/src/app/components/game-of-life/game-of-life.component.css
@@ -41,6 +41,7 @@
   
   /* Ensure grid list takes appropriate space */
   mat-grid-list {
+      padding-bottom: 0rem !important;
       width: 80%; /* Adjust width as needed */
       max-width: 800px; /* Max width for larger screens */
       border: 1px solid #aaa; /* Border around the whole grid */
